Fix: Rename vertical spacing class
Vertical spacing class should follow the format v..px to symbolize
'vertical' (rather than h..px). The use of h..px was an accident.

--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -52,7 +52,7 @@ nav .brand-logo {
 // Add a set amount of vertical spacing between elements
 // Usage: div.spacing with h16, h32, ..., h64, h128
 @each $factor in 1, 2, 3, 4, 8 {
-  div.spacing.h#{$factor * $base-unit} {
+  div.spacing.v#{$factor * $base-unit} {
     display: block;
     height: $factor * $base-unit;
   }
